tests/spec/emit/snapshots/map_key_generic_in_expression_comparable.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn foo<U>(u: U) {}
  
  fn make_map<T: Comparable>(t: T) -> int {
    foo(Map.new<T, int>())
    0
  }
---
package main

func foo[U any](_ U) {}

func makeMap[T comparable](_ T) int {
	foo(make(map[T]int))
	return 0
}
