tests/spec/emit/snapshots/map_key_use_in_if_condition_constrains_generic.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn score<T>() -> int {
    if Map.new<T, int>().is_empty() {
      1
    } else {
      0
    }
  }
  
  fn main() {
    let _ = score<int>()
  }
---
package main

func score[T comparable]() int {
	if len(make(map[T]int)) == 0 {
		return 1
	}
	return 0
}

func main() {
	_ = score[int]()
}
