tests/spec/emit/snapshots/map_key_use_in_let_initializer_constrains_generic.snap
---
source: tests/spec/emit/types.rs
description: "input: \nfn is_empty<T>() -> bool {\n  let empty = Map.new<T, int>().is_empty()\n  empty\n}\n\nfn main() {\n  let _ = is_empty<int>()\n}\n"
---
package main

func is_empty[T comparable]() bool {
	empty := len(make(map[T]int)) == 0
	return empty
}

func main() {
	_ = is_empty[int]()
}
