tests/spec/emit/snapshots/map_key_use_in_let_initializer_uses_declared_bound.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn is_empty<T: Comparable>() -> bool {
    let empty = Map.new<T, int>().is_empty()
    empty
  }
  
  fn main() {
    let _ = is_empty<int>()
  }
---
package main

func isEmpty[T comparable]() bool {
	empty := len(make(map[T]int)) == 0
	return empty
}

func main() {
	isEmpty[int]()
}
