tests/spec/emit/snapshots/map_key_use_in_tail_expression_constrains_generic.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn is_empty<T>() -> bool {
    Map.new<T, int>().is_empty()
  }
  
  fn main() {
    let _ = is_empty<int>()
  }
---
package main

func is_empty[T comparable]() bool {
	return len(make(map[T]int)) == 0
}

func main() {
	_ = is_empty[int]()
}
