tests/spec/emit/snapshots/map_key_use_in_tail_expression_uses_declared_bound.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn is_empty<T: Comparable>() -> bool {
    Map.new<T, int>().is_empty()
  }
  
  fn main() {
    let _ = is_empty<int>()
  }
---
package main

func isEmpty[T comparable]() bool {
	return len(make(map[T]int)) == 0
}

func main() {
	isEmpty[int]()
}
