tests/spec/emit/snapshots/map_length.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(m: Map<string, int>) -> int {
    m.length()
  }
---
package main

func test(m map[string]int) int {
	return len(m)
}
