tests/spec/emit/snapshots/map_new.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Map<string, int> {
    Map.new<string, int>()
  }
---
package main

func test() map[string]int {
	return make(map[string]int)
}
