tests/spec/emit/snapshots/map_new_unknown_value_explicit_type_args.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() {
    let mut m = Map.new<string, Unknown>()
    m["key"] = "value"
  }
---
package main

func test() {
	m := make(map[string]any)
	m["key"] = "value"
}
