tests/spec/emit/snapshots/map_of_slice_equals.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(a: Map<string, Slice<int>>, b: Map<string, Slice<int>>) -> bool {
    a.equals(b)
  }
---
package main

import (
	"maps"
	"slices"
)

func test(a, b map[string][]int) bool {
	return maps.EqualFunc(a, b, func(a_1, b_1 []int) bool { return slices.Equal(a_1, b_1) })
}
